# GameEngine2023

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: test.shader  test2.shader
src/: main.cpp
src/Engine/: Camera.h  EBO.cpp  EBO.h  Engine.cpp  Engine.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
